[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/textures/item_slot_empty_background.png" type="Texture" id=1]
[ext_resource path="res://test_skill/spell_1/iron_sword.png" type="Texture" id=2]
[ext_resource path="res://young_plants/ui/texture/trans-bar.png" type="Texture" id=3]
[ext_resource path="res://fonts/m5x7.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://plants/ui/texture/bar-white.png" type="Texture" id=5]
[ext_resource path="res://items/scene/item_durability.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="ItemDurability" type="Node2D"]
visible = false
script = ExtResource( 6 )

[node name="Holder" type="Node2D" parent="."]
position = Vector2( 120, 0 )

[node name="DurableMeter" type="TextureProgress" parent="Holder"]
self_modulate = Color( 0.658824, 1, 0.596078, 1 )
margin_left = 17.0
margin_right = 77.0
margin_bottom = 15.0
rect_scale = Vector2( 1.6, 1.2 )
value = 100.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 5 )
fill_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DurableLabel" type="Label" parent="Holder"]
margin_left = 68.0
margin_top = 1.0
margin_right = 107.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color = Color( 1, 0.968627, 0.803922, 1 )
custom_fonts/font = SubResource( 1 )
text = "15"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemIconHolder" type="TextureRect" parent="Holder"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemIcon" type="TextureRect" parent="Holder"]
margin_top = 1.0
margin_right = 17.0
margin_bottom = 17.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true
